--- a/apps/web/components/layout/Hero/hero.module.css
+++ b/apps/web/components/layout/Hero/hero.module.css
@@ -3,5 +3,5 @@
 }
 
 .title {
-	@apply text-center text-black dark:text-white;
+	@apply text-center;
 }
