--- a/apps/web/components/tool/AddressBar/addressbar.module.css
+++ b/apps/web/components/tool/AddressBar/addressbar.module.css
@@ -3,15 +3,15 @@
 }
 
 .inputfirst {
-	@apply p-4 sm:pl-52 outline-none w-full rounded-full sm:rounded-none sm:rounded-l-full sm:border-r-0 border-2 border-blue-600 bg-slate-200;
+	@apply p-4 sm:pl-52 outline-none w-full rounded-full sm:rounded-none sm:rounded-l-full sm:border-r-0 border-2 border-blue-600;
 }
 
 .inputsecond {
-	@apply p-4 sm:pr-16 outline-none w-full rounded-full sm:rounded-none sm:rounded-r-full sm:border-l-0 border-2 border-blue-600 bg-slate-200;
+	@apply p-4 sm:pr-16 outline-none w-full rounded-full sm:rounded-none sm:rounded-r-full sm:border-l-0 border-2 border-blue-600;
 }
 
 .inputaddress {
-	@apply p-4 sm:pl-40 outline-none w-full rounded-full border-2 border-blue-600 bg-slate-200;
+	@apply p-4 sm:pl-40 outline-none w-full rounded-full border-2 border-blue-600;
 }
 
 .addressbutton {
@@ -19,11 +19,11 @@
 	@apply p-4 rounded-full text-white font-bold;
 	@apply bg-gradient-to-tl from-blue-500 via-indigo-600 to-violet-600;
 
-	@apply sm:absolute sm:ml-2 sm:left-0;
+	@apply sm:absolute sm:ml-[0.3rem] sm:left-0;
 }
 .iconbutton {
 	@apply flex flex-row justify-center items-center w-full sm:w-12 h-12 rounded-full text-white;
 	@apply rounded-full text-white font-bold space-x-4 sm:space-x-0;
 	@apply bg-gradient-to-tl from-blue-500 via-indigo-600 to-violet-600;
-	@apply sm:absolute sm:right-0 sm:mr-2;
+	@apply sm:absolute sm:right-0 sm:mr-[0.3rem];
 }
