--- a/apps/web/components/tool/RodizioDate/RodizioDate.module.css
+++ b/apps/web/components/tool/RodizioDate/RodizioDate.module.css
@@ -14,6 +14,10 @@
 	@apply text-gray-600;
 }
 
+:global(.dark) .month {
+	@apply text-gray-400;
+}
+
 .description {
 	@apply py-4 flex-shrink w-full md:w-32;
 }
