--- a/apps/web/styles/global.css
+++ b/apps/web/styles/global.css
@@ -17,6 +17,10 @@
 		@apply transition hover:text-violet-600;
 	}
 
+	body {
+		@apply transition-colors;
+	}
+
 	input[type="number"]::-webkit-inner-spin-button,
 	input[type="number"]::-webkit-outer-spin-button {
 		-webkit-appearance: none;
